ruoyi_code_generation_participation_table